Change `/js/load-theme.js` to `js/load-theme.js`.

--- a/404.html
+++ b/404.html
@@ -307,7 +307,7 @@
     <script>const isSiteThemeDark = false;</script>
   
   
-  <script src="/js/load-theme.js"></script>
+  <script src="js/load-theme.js"></script>
 
   <aside class="search-results" id="search">
   <div class="container">
