--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     <script>const isSiteThemeDark = false;</script>
   
   
-  <script src="/js/load-theme.js"></script>
+  <script src="js/load-theme.js"></script>
 
   <aside class="search-results" id="search">
   <div class="container">
