Update website based on feedback.

--- a/404.html
+++ b/404.html
@@ -251,7 +251,7 @@
 
   
 
-  <link rel="manifest" href="index.webmanifest">
+  <link rel="manifest" href="/index.webmanifest">
   <link rel="icon" type="image/png" href="images/icon_hua0cadf66651d69d307ba4e93758c0005_10827_32x32_fill_lanczos_center_3.png">
   <link rel="apple-touch-icon" type="image/png" href="images/icon_hua0cadf66651d69d307ba4e93758c0005_10827_192x192_fill_lanczos_center_3.png">
 
