Update arxiv link.

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
       <div class="text-center mt-6">
         <div class="flex flex-wrap justify-center gap-4">
           <span class="ml-4 mr-4">
-            <a href="https://drive.google.com/file/d/1u3ERxLCqAOhJHhgXEFcH5abE7pmc24YD/view?usp=sharing">  
+            <a href="https://arxiv.org/abs/2409.00138">  
               <i class="ai ai-arxiv mr-2"></i>
               Paper
             </a>
@@ -791,7 +791,7 @@
 <img src="files/prompting.jpg" style="max-width: 100%; height: auto; margin-top: 20px; margin-bottom: 20px;">
 <ol start="3">
 <li>We experiment with adding privacy-enhancing content to the agent system prompt, but <strong>such prompt engineering does not significantly boost performance in action-based evaluation</strong>.</li>
-<li><a href="https://drive.google.com/file/d/1u3ERxLCqAOhJHhgXEFcH5abE7pmc24YD/view?usp=sharing" target="_blank" rel="noopener">Our paper</a> includes further analysis of the safety-helpfulness trade-off.</li>
+<li><a href="https://arxiv.org/abs/2409.00138" target="_blank" rel="noopener">Our paper</a> includes further analysis of the safety-helpfulness trade-off.</li>
 </ol>
 <div style="border: 2px solid #000; border-radius: 10px; padding: 10px; width: 100%; margin: 0 auto; background-color: lightyellow;" class="mt-2">
 <strong>⭐ Takeaways:</strong><br>
@@ -857,7 +857,7 @@
     <div class="col-12 col-lg-8">
       <p>We consider our work to be <span style="background-color: lightyellow;">a first step in exploring privacy norm awareness of LMs in action</span> and recognize two main limitations that can serve as interesting directions for future work:</p>
 <ol>
-<li>We collect general privacy norms in the U.S to construct our dataset, but inherently, <strong>privacy concerns can differ across individuals and cultural groups</strong> (check out additional experiments by leveraging <a href="https://arxiv.org/abs/2404.15238" target="_blank" rel="noopener">CultureBank</a> in <a href="https://drive.google.com/file/d/1u3ERxLCqAOhJHhgXEFcH5abE7pmc24YD/view?usp=sharing" target="_blank" rel="noopener">Appendix D</a>).</li>
+<li>We collect general privacy norms in the U.S to construct our dataset, but inherently, <strong>privacy concerns can differ across individuals and cultural groups</strong> (check out additional experiments by leveraging <a href="https://arxiv.org/abs/2404.15238" target="_blank" rel="noopener">CultureBank</a> in <a href="https://arxiv.org/abs/2409.00138" target="_blank" rel="noopener">Appendix D</a>).</li>
 <li>Our setup focuses on LM-mediated communication (e.g., using LM agent to send emails/messages, etc.). <strong>Unintentional LM privacy leakage can occur in other scenarios</strong> (e.g., web agents interacting with websites).</li>
 </ol>
 <p>If you have any thoughts or are interested in this line of research, feel free to <a href="mailto:shaoyj@stanford.edu">reach out to us</a>.</p>
